# ticketing-platform

./: .env.sample  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/controllers/: system.py
app/controllers/api/: routes.py
app/controllers/api/v1/: __init__.py  bookings.py  events.py
app/core/: db.py
app/exceptions/: __init__.py  base_exceptions.py  booking.py  event.py
app/models/: __init__.py  booking.py  event.py  payment.py
app/repositories/: __init__.py  booking_repository.py  event_repository.py
app/schemas/: __init__.py  booking.py  event.py  payment.py
app/seeds/: run_seeder.py
app/workers/: bookings_worker.py
config/: entrypoint.sh
migrations/: env.py
migrations/versions/: 4eab87a70f1a_.py  a2606b4da321_.py
tests/: conftest.py
tests/integration/: test_concurrency.py  test_endpoints.py
tests/unit/: test_models.py
