[project]
name = "ticketing-platform"
version = "0.1.0"
description = "Small fragment of a real-world Ticketing Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
target-version = "py310"
line-length = 120

src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (standard syntax rules)
    "W",   # pycodestyle warnings (formatting warnings)
    "F",   # Pyflakes (detects unused imports, undefined variables)
    "I",   # isort (automatically sorts your imports alphabetically)
    "B",   # flake8-bugbear (catches design patterns prone to bugs/race conditions)
    "C4",  # flake8-comprehensions (optimizes list/dict generation)
    "UP",  # pyupgrade (forces modern Python syntax improvements)
    "ASYNC" # flake8-async (warns against bad async routines blocking execution loops)
]

ignore = [
    "B008", # Do not perform function calls in argument defaults. (Disabled for FastAPI Depends())
]

fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
# Ignore undefined name errors in models where ORM string literals map relationships
"app/models/*.py" = ["F821"]

# Ignore assert usage warnings and unused imports inside test configurations
"tests/**/*.py" = ["S101", "F401"]
"app/core/db.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "."
]
